--- a/style.css
+++ b/style.css
@@ -347,7 +347,65 @@ footer {
   text-decoration-color: white;
 }
 
-/* LG Screens - Laptops */
+/* PRODUCTS PAGE */
+
+#all-products {
+  min-height: 50vh;
+}
+
+.all-products__row {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.products__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.products__header__link {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.products__header__link__text {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.products__header__title {
+  font-size: 1.75rem;
+  text-transform: uppercase;
+}
+
+.products__header__filter {
+  background: #f4f4f4;
+  color: #292929;
+  outline: none;
+  border: none;
+  padding: 0.25rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.products__list__spinner {
+  font-size: 40px;
+  margin: 0 auto;
+  animation: loading-spinner 1s infinite;
+}
+
+@keyframes loading-spinner {
+  0% {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: 360deg;
+  }
+}
 
 @media screen and (max-width: 1024px) {
   .product__details__title {
@@ -358,8 +416,6 @@ footer {
     padding: 0 5rem;
   }
 }
-
-/* MD Screens - Tablets */
 
 @media screen and (max-width: 768px) {
   .product {
@@ -374,8 +430,6 @@ footer {
     display: none;
   }
 }
-
-/* SM Screens */
 
 @media screen and (max-width: 640px) {
   .nav__links {
@@ -404,8 +458,6 @@ footer {
   }
 }
 
-/* Mobile devices */
-
 @media screen and (max-width: 480px) {
   .header__grid__title {
     left: 4px;
@@ -422,5 +474,12 @@ footer {
 
   .newsletter__form__input {
     text-align: center;
+  }
+
+  /* PRODUCTS PAGE */
+
+  .products__header {
+    flex-direction: column;
+    gap: 1rem;
   }
 }
